Modified Notebook, Readme and Added train.py

--- a/notebook/medsrgan.ipynb
+++ b/notebook/medsrgan.ipynb
@@ -80,16 +80,9 @@
    "source": [
     "import glob\n",
     "\n",
-    "heart_data = glob.glob('/kaggle/input/echo-all/Extracted/*.jpg')[:1000]\n",
+    "data = glob.glob('data/*.jpg')\n",
     "\n",
-    "br_data = glob.glob('/kaggle/input/breast-ultrasound-images-dataset/Dataset_BUSI_with_GT/*/*.png')\n",
-    "br_data = [path for path in br_data if '_mask' not in path]\n",
-    "\n",
-    "ct_data = glob.glob('/kaggle/input/chest-ctscan-images/Data/train/*/*.png')\n",
-    "\n",
-    "heart_data.extend(br_data)\n",
-    "heart_data.extend(ct_data)\n",
-    "dataframe = pd.DataFrame(heart_data, columns=['paths'])"
+    "dataframe = pd.DataFrame(data, columns=['paths'])"
    ],
    "metadata": {
     "execution": {
